# midi-merger

./: .gitignore  CLAUDE.md  CODE_REVIEW_ISSUES.md  Cargo.toml  LICENSE  README.md  midi_gen.py  pyproject.toml  run_midi.sh
.claude/: settings.local.json
hardware/: MIDI Box.csv  MIDI Box.kicad_pcb  MIDI Box.kicad_prl  MIDI Box.kicad_pro  MIDI Box.kicad_sch  MIDI Box.kicad_sch-bak  MIDI Box.xml  fp-info-cache  sym-lib-table
hardware/fab/: MIDI Box-B_Cu.gbl  MIDI Box-B_Mask.gbs  MIDI Box-B_Paste.gbp  MIDI Box-B_Silkscreen.gbo  MIDI Box-Edge_Cuts.gm1  MIDI Box-F_Cu.gtl  MIDI Box-F_Mask.gts  MIDI Box-F_Paste.gtp  MIDI Box-F_Silkscreen.gto  MIDI Box-NPTH-drl_map.gbr  MIDI Box-NPTH.drl  MIDI Box-PTH-drl_map.gbr  MIDI Box-PTH.drl
software/: Cargo.toml  build_release.sh
software/scripts/: midi_gen.py
software/src/: main.rs  midi_parser.rs  midi_uart.rs
src/: main.rs  midi_parser.rs  midi_uart.rs
