[package]
name = "rp-embassy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
embassy-rp = { version = "0.2.0", features = [
    "critical-section-impl",
    "time-driver",
] }
cortex-m-rt = "0.7.3"
defmt = "0.3.5"
defmt-rtt = "0.4.0"
embassy-executor = { version = "0.6.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "integrated-timers",
] }
embassy-time = "0.3.2"
embassy-sync = "0.6.0"
heapless = "0.8.0"
